--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.gruia.ar_app">
+    <!-- This permits the user to access Camera -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <!--
+This helps to check a specific feature in the phone's hardware,
+        here it is OpenGlES version. Sceneform needs OpenGLES Version 3.0 or later
+    -->
+    <uses-feature
+        android:glEsVersion="0x00030000"
+        android:required="true" />
+    <!--
+Indicates that this app requires Google Play Services for AR.
+        Limits app visibility in the Google Play Store to ARCore supported devices
+    -->
+    <uses-feature
+        android:name="android.hardware.camera.ar"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +29,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ANDAR_App_Project"
         tools:targetApi="31">
+        <activity
+            android:name=".AnatomyActivity"
+            android:exported="false" />
+        <!--
+         ARCore need to be installed, as the app does not include any non-AR features.
+             For an "AR Optional" app, specify "optional" instead of "required".
+        -->
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
+
+        <activity
+            android:name=".GeometryActivity"
+            android:exported="false" />
         <activity
             android:name=".ProgressActivity"
             android:exported="false" />
@@ -38,7 +67,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.google.ar.core" android:value="optional" />
     </application>
 
 </manifest>
