--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,22 @@ plugins {
     id 'com.android.library' version '7.2.2' apply false
 }
 
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+allprojects {
+
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:deprecation"
+        }
+    }
+}
+
+
+
+
+
