--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,17 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AND-AR_App_Project"
 include ':app'
+
+// this will add sceneformsrc folder into your project
+
+include ':sceneform'
+
+project(':sceneform').projectDir = new File('sceneformsrc/sceneform')
+
+
+
+// this will add sceneformux folder into your project
+
+include ':sceneformux'
+
+project(':sceneformux').projectDir = new File('sceneformux/ux')
